Closed Bug 509747 Opened 15 years ago Closed 15 years ago

Thunderbird 3.0b4pre checks for new mail every 30 seconds regardless of account settings (when mail.server.serverN.check_time>=36, PRInt32 overflow occurs)

Categories

(MailNews Core :: Networking: POP, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 3.0b4

People

(Reporter: wibblepapa-eb, Assigned: sgautherie)

References

Details

(Keywords: regression)

Attachments

(3 files)

User-Agent:       Mozilla/5.0 (Windows; U; Windows NT 6.0; en-GB; rv:1.8.1.14) Gecko/20080404 Firefox/2.0.0.14
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.1.3pre) Gecko/20090811 Shredder/3.0b4pre

Have setup multiple accounts previously.
Under "Server Settings" section - "Check for new messages every xx minutes". Current setting is 37 minutes on 1 account, but mail scanner proxy is getting requests every 30 seconds for new mail.

Happens the same with any account and no matter what the setting is in minutes.

Reproducible: Always

Steps to Reproduce:
As above. Ignores "Check for new messages every ..." setting.
Anything in Tools -> Error console ?
Component: Preferences → Mail Window Front End
QA Contact: preferences → front-end
Version: unspecified → Trunk
Hi

Only this :-

Warning: Timed textboxes are deprecated. Consider using type="search" instead.
Source File: chrome://messenger/content/messenger.xul
Line: 0
Can you have a look into your prefs.js file and make sure that the settings are the proper one. Are you suing Pop, imap ?
Everything looks fine to me and what I set - the "user_pref("mail.server.server3.check_time", 41);" for example is what I set.

I can get e-mails fine using all accounts (all POP3).

Is there anything I should be looking for?
Component: Mail Window Front End → Networking: POP
Product: Thunderbird → MailNews Core
QA Contact: front-end → networking.pop
Version: Trunk → 1.9.1 Branch
(In reply to comment #0)
> Current setting is 37 minutes on 1 account,
> but mail scanner proxy is getting requests every 30 seconds for new mail.

Get protocol log with timestamp, and check protocol level flow first.
> https://wiki.mozilla.org/MailNews:Logging
> http://www.mozilla.org/projects/netlib/http/http-debugging.html
> Timestamp of nspr log : Bug 402793 Comment #17

I think following parameter is appropriate for first analysis. 
> SET NSPR_LOG_MODULES=nnsHostResolver:5,sHttp:5,mime:5,imap:5,nntp:5,smtp:5,pop3:5,ldap :5,timestamp
Thank you for comment.

Attachment is compressed using 7-zip. Protocol log using parameters as requested.
And "requests every 30 seconds which your mail scanner proxy is getting" was really request of periodical mail check to POP3 server for new mail by Tb?
Yes. From my personal firewall network activity, I can see that the "Thunderbird.exe" process is generating network traffic every 30 seconds to the AVG mail proxy ("avgmc.exe"). The avgmc.exe mail proxy is then checking the mail server.

The actual IP's/ports used are :

Thunderbird connects to :

IP 127.0.0.1, ports 10110, 10111 (AVG mail proxy listens on these ports)

AVG mail proxy (AVGMC.exe) connects to :

<<mail server IP 1>>, port 110 and <<mail server IP 2>>, port 110

Connection is Thunderbird -> AVG Mail Proxy -> Mail server
(In reply to comment #8)
> I can see that the "Thunderbird.exe" process is generating network traffic
> every 30 seconds to the AVG mail proxy ("avgmc.exe").
>(snip)
> Connection is Thunderbird -> AVG Mail Proxy -> Mail server

Protocol log you got is POP3(and some others) level flow of "Thunderbird <-> AVG Mail Proxy". Is there log data for the "network traffic every 30 seconds to the AVG mail proxy"?
See RFC 1939 for POP3 command.
> http://tools.ietf.org/html/rfc1939
> http://en.wikipedia.org/wiki/Post_Office_Protocol

Do you use add-on(extension) relates to POP3 access? If yes, can you reproduce your problem with Tb's safe mode(thundebird.exe -safe-mode)?

> Gecko/20090811 Shredder/3.0b4pre

Do you remember last build which didn't have the problem?
Attached file Firewall logs. β€”
> Protocol log you got is POP3(and some others) level flow of "Thunderbird <->
> AVG Mail Proxy". Is there log data for the "network traffic every 30 seconds > to the AVG mail proxy"?

See attached logs.

>> Do you use add-on(extension) relates to POP3 access? If yes, can you reproduce
>> your problem with Tb's safe mode(thundebird.exe -safe-mode)?

None used. Disabled all plugins (just in case) and no change.

>> Do you remember last build which didn't have the problem?

Not sure. Only noticed recently. Maybe 3.0b3 build?
Report of my quick check result with 2009/8/13 build on MS Win-XP.
  "Check for new messages every NN minutes" setting : 
      4 minutes : Problem was not observed. 
     37 minutes : Login/CAPA/STAT/QUIT each 30 seconds was observed.
I'll try to do duplication test and to find regression range.

Can you reproduce problem with mail.server.server3.check_time=9(single digit) or larger value such as 999?
From my testing.

With a setting of 73 minutes and above (not sure at which point it changes again) it checks at 60 second intervals.

With a setting of 100 minutes it check at 240 second intervals.

Any setting below 73 minutes and it checks at 30 seconds intervals.
From my testing (2009/8/13 build).
   3 min, 4 min  : interval of 3 min(180 seconds) or 4 min(240 seconds)     
   9 min, 35 min : Login/CAPA/STAT/QUIT after 30 seconds was not observed
  36 min, 37 min : Login/CAPA/STAT/QUIT was issued after 30 seconds
Confirming.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Rough regression window using builds I happened to have(with 36 min setting).
> 2009/07/10 OK
> 2009/07/21 OK  rv:1.9.1.2pre Gecko/20090721 Shredder/3.0b4pre
> 2009/07/24 BAD rv:1.9.1.2pre Gecko/20090724 Shredder/3.0b4pre
> 2009/08/01 BAD
Regression range:
(Problem doesn't occur)
> Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.1.2pre) Gecko/20090723 Shredder/3.0b4pre
(Problem started to occur)
> Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.1.2pre) Gecko/20090724 Shredder/3.0b4pre

Change log around 7/23.
> http://hg.mozilla.org/comm-central/log/6d6f96b9aeb7
Problem was produced by next change? 
> a0da9ca1c4b2: Bug 488979 - |mailnews/base/src/nsMsgBiffManager.cpp(261) :
>     warning C4244: 'initializing' : conversion from 'double' to 'PRInt64',
>     possible loss of data|; (Av1) Fix nits in SetNextBiffTime();
>     Thu, 23 Jul 2009 23:16:51 +0200 - rev 3121
(In reply to comment #13)
>   35 min : Login/CAPA/STAT/QUIT after 30 seconds was not observed

35 * 60,000,000 = 2,100,000,000 (<= 2,147,483,647)

>   36 min : Login/CAPA/STAT/QUIT was issued after 30 seconds

PRInt32 overflow, caused by bug 488979.
Assignee: nobody → sgautherie.bz
Blocks: 488979
Status: NEW → ASSIGNED
Flags: in-testsuite-
Keywords: regression
OS: Windows XP → All
Hardware: x86 → All
Summary: Thunderbird 3.0 b4 pre checks for new mail every 30 seconds regardless of account settings. → Thunderbird 3.0b4pre checks for new mail every 30 seconds regardless of account settings
Target Milestone: --- → Thunderbird 3.0b4
Version: 1.9.1 Branch → Trunk
Attachment #394492 - Flags: superreview?(bienvenu)
Attachment #394492 - Flags: review?(bienvenu)
Comment on attachment 394492 [details] [diff] [review]
(Av1) Force 64-bit multiplication, fix nits
[Checkin: Comment 19]

looks ok, thx.
Attachment #394492 - Flags: superreview?(bienvenu)
Attachment #394492 - Flags: superreview+
Attachment #394492 - Flags: review?(bienvenu)
Attachment #394492 - Flags: review+
Blocks: 507188
Comment on attachment 394492 [details] [diff] [review]
(Av1) Force 64-bit multiplication, fix nits
[Checkin: Comment 19]


http://hg.mozilla.org/comm-central/rev/9e6af989f362
Attachment #394492 - Attachment description: (Av1) Force 64-bit multiplication, fix nits → (Av1) Force 64-bit multiplication, fix nits [Checkin: Comment 19]
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Summary: Thunderbird 3.0b4pre checks for new mail every 30 seconds regardless of account settings → Thunderbird 3.0b4pre checks for new mail every 30 seconds regardless of account settings (when mail.server.serverN.check_time>=36, PRInt32 overflow occurs)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: