Bug 509747 - Thunderbird 3.0b4pre checks for new mail every 30 seconds regardless of account settings; (Av1) Force 64-bit multiplication, fix nits; r+sr=bienvenu